<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group
                android:checkableBehavior="single">
        <item
            android:id="@+id/my_activation"
            android:icon="@drawable/ic_activation"
            android:title="@string/my_activation">
        </item>
        <item
            android:id="@+id/my_renewal"
            android:icon="@drawable/ic_renewal"
            android:title="@string/my_renewal">
        </item>
        <item
            android:id="@+id/nxav_gc_rewards"
            android:icon="@drawable/ic_reward"
            android:title="@string/nxav_gc_rewards">
        </item>
        <item
            android:id="@+id/current_scheme"
            android:icon="@drawable/ic_scheme"
            android:title="@string/current_scheme">
        </item>
        <item
            android:id="@+id/order_netlux"
            android:icon="@drawable/ic_order"
            android:title="@string/order_netlux">
        </item>
        <item
            android:id="@+id/netlux_topup"
            android:icon="@drawable/ic_topup"
            android:title="@string/netlux_topup">
        </item>
        <item
            android:id="@+id/customer_search"
            android:icon="@drawable/ic_icons8_search"
            android:title="@string/customer_search">
        </item>
        <item
            android:id="@+id/technical_helpline"
            android:icon="@drawable/ic_itechnical_helpline"
            android:title="@string/technical_helpline">
        </item>
        <item
            android:id="@+id/marketing_helpline"
            android:icon="@drawable/ic_marketing_helpline"
            android:title="@string/marketing_helpline">
        </item>
        </group>
</menu>