<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".fragments.MarketingHelplineFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="20dp"
                android:src="@drawable/ic_ftechnincal_helpline_img" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Netlux Helpine"
                android:textSize="25sp"
                android:textColor="#0B4F7C"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Contact Details"
                android:textColor="#0B4F7C"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_helpline"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Marketing"
                android:textColor="@color/marron"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_baseline_star_border_24" />

                <TextView
                    android:id="@+id/textView06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/marketing_helpline_1"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/whatsapp_marketing_1"
                    android:tag="whatsapp_marketing_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_whatsapp" />

                <ImageView
                    android:id="@+id/call_marketing_1"
                    android:tag="call_marketing_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:src="@drawable/ic_baseline_call_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView09"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_baseline_star_border_24" />

                <TextView
                    android:id="@+id/textView011"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/marketing_helpline_2"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/whatsapp_marketing_2"
                    android:tag="whatsapp_marketing_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_whatsapp" />

                <ImageView
                    android:id="@+id/call_marketing_2"
                    android:tag="call_marketing_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:src="@drawable/ic_baseline_call_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView010"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".2"
                    android:src="@drawable/ic_baseline_star_border_24" />

                <TextView
                    android:id="@+id/textView012"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/marketing_helpline_3"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/whatsapp_marketing_3"
                    android:tag="whatsapp_marketing_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:src="@drawable/ic_whatsapp" />

                <ImageView
                    android:id="@+id/call_marketing_3"
                    android:tag="call_marketing_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:src="@drawable/ic_baseline_call_24" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_helpline">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Technical"
                android:textColor="@color/marron"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_baseline_star_border_24" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/technical_helpline_1"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/call_technical_1"
                    android:tag="call_technical_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:src="@drawable/ic_baseline_call_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_baseline_star_border_24" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/technical_helpline_2"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/whatsapp_technical_2"
                    android:tag="whatsapp_technical_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_whatsapp" />

                <ImageView
                    android:id="@+id/call_technical_2"
                    android:tag="call_technical_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:src="@drawable/ic_baseline_call_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".2"
                    android:src="@drawable/ic_baseline_star_border_24" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/technical_helpline_3"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/call_technical_3"
                    android:tag="call_technical_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:src="@drawable/ic_baseline_call_24" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
